--- a/package.json
+++ b/package.json
@@ -6,18 +6,14 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npx ts-node src/index",
-    "dev": "nodemon -L src/index.ts"
+    "dev": "nodemon -L src/index.ts",
+    "build": "npx tsc"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^3.6.0",
-    "@types/bcrypt": "^5.0.0",
-    "@types/cors": "^2.8.12",
-    "@types/express": "^4.17.13",
-    "@types/jsonwebtoken": "^8.5.6",
-    "@types/morgan": "^1.9.3",
-    "@types/multer": "^1.4.7",
+    "prisma": "^3.6.0",
     "bcrypt": "^5.0.1",
     "cloudinary": "^1.27.1",
     "cors": "^2.8.5",
@@ -32,6 +28,11 @@
     "typescript": "^4.5.4"
   },
   "devDependencies": {
-    "prisma": "^3.6.0"
+    "@types/bcrypt": "^5.0.0",
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.6",
+    "@types/morgan": "^1.9.3",
+    "@types/multer": "^1.4.7"
   }
 }
