--- a/package.json
+++ b/package.json
@@ -13,6 +13,12 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^3.6.0",
+    "@types/bcrypt": "^5.0.0",
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.6",
+    "@types/morgan": "^1.9.3",
+    "@types/multer": "^1.4.7",
     "prisma": "^3.6.0",
     "bcrypt": "^5.0.1",
     "cloudinary": "^1.27.1",
@@ -28,11 +34,6 @@
     "typescript": "^4.5.4"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.0",
-    "@types/cors": "^2.8.12",
-    "@types/express": "^4.17.13",
-    "@types/jsonwebtoken": "^8.5.6",
-    "@types/morgan": "^1.9.3",
-    "@types/multer": "^1.4.7"
+    
   }
 }
